--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,10 +23,11 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  name_template: "{{ incpatch .Version }}"
 changelog:
   sort: asc
   filters:
     exclude:
+      - '^Merge'
       - '^docs:'
       - '^test:'
